--- a/huellaProto/huellaProto/Views/Energia.xaml
+++ b/huellaProto/huellaProto/Views/Energia.xaml
@@ -27,7 +27,8 @@
                         VerticalOptions="CenterAndExpand">
                         <Label Text="¿Cuál es el consumo promedio (En kW/h), en la factura de servicios públicos, del consumo mensual de Energía Eléctrica en la institución?" XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                          <Entry Keyboard="Numeric">
+                          <Entry Keyboard="Numeric"
+                                 Text="{Binding EnergiaKwh, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -52,7 +53,8 @@
                             Text="¿Cuál es el consumo promedio (En metros cúbicos), en la factura de servicios públicos, del consumo mensual de Gas Natural en la institución?"
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                           <Entry Keyboard="Numeric">
+                           <Entry Keyboard="Numeric"
+                                  Text="{Binding Gas, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -77,20 +79,9 @@
                             Text="¿La institución cuenta con algún tipo de energía renovable?"
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                           <Entry Keyboard="Numeric">
-                             <Entry.WidthRequest>
-                                <OnIdiom
-                                    x:TypeArguments="x:Double"
-                                    Phone="80.0"
-                                    Tablet="140.0" />
-                            </Entry.WidthRequest>
-                                <Entry.HeightRequest>
-                                <OnIdiom
-                                    x:TypeArguments="x:Double"
-                                    Phone="45.0"
-                                    Tablet="35.0" />
-                            </Entry.HeightRequest>
-                           </Entry>
+                            <Label Text="NO" XAlign="Center" />
+                            <Switch IsToggled="{Binding EnergiaRenovable, Mode=TwoWay}"></Switch>
+                            <Label Text="SI" XAlign="Center" />
                         </StackLayout>
                     </StackLayout>
                     <StackLayout
