--- a/huellaProto/huellaProto/Views/FormRegistrar.xaml
+++ b/huellaProto/huellaProto/Views/FormRegistrar.xaml
@@ -3,11 +3,12 @@
     x:Class="huellaProto.Views.FormRegistrar"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:behaviors="clr-namespace:huellaProto.Views.FormRegistrar.Behaviors;assembly=huellaProto..Views.FormRegistrar"
+   
     Title="Registro"
     BindingContext="{Binding Main, Source={StaticResource Locator}}">
     <!--<ContentPage.Resources>
         <ResourceDictionary>
+     xmlns:behaviors="clr-namespace:huellaProto.Views.FormRegistrar.Behaviors;assembly=huellaProto..Views.FormRegistrar"
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor" Value="#F6B131" />
                 <Setter Property="BarTextColor" Value="White" />
@@ -35,9 +36,9 @@
                             Placeholder="Institución"
                             Text="{Binding Nombre, Mode=TwoWay}"
                             WidthRequest="200">
-                            <Entry.Behaviors>
+                            <!--<Entry.Behaviors>
                                 <behaviors:EntryLengthValidatorBehavior MaxLength="3" />
-                            </Entry.Behaviors>
+                            </Entry.Behaviors>-->
                         </Entry>
                         <Image
                             IsVisible="{Binding IsVisibleIns, Mode=TwoWay}"
