--- a/huellaProto/huellaProto/Views/Trasnporte.xaml
+++ b/huellaProto/huellaProto/Views/Trasnporte.xaml
@@ -8,10 +8,7 @@
     <ContentPage.Content>
 
         <ScrollView BindingContext="{Binding Tabs}">
-
             <StackLayout Padding="10" VerticalOptions="FillAndExpand">
-
-                
                 <StackLayout IsVisible="{Binding IsVisiblePreg, Mode=TwoWay}" VerticalOptions="EndAndExpand">
                      <Image
                         Margin="0,0,0,60"
@@ -77,7 +74,8 @@
                         <Label Text="¿Con cuántos vehículos cuenta la institución?" XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="aeroplane_icon" WidthRequest="20" />
-                            <Entry Keyboard="Numeric">
+                            <Entry Keyboard="Numeric"
+                                   Text="{Binding CantidadTotal, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -103,7 +101,8 @@
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="combustible_icon" WidthRequest="15" />
-                            <Entry Keyboard="Numeric">
+                            <Entry Keyboard="Numeric"
+                                   Text="{Binding CantidadGasolina, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -117,7 +116,8 @@
                                     Tablet="35.0" />
                             </Entry.HeightRequest>
                            </Entry>
-                           <Entry Keyboard="Numeric">
+                           <Entry Keyboard="Numeric"
+                                  Text="{Binding Km_Gasolina, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -144,7 +144,8 @@
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="combustible_icon" WidthRequest="15" />
-                            <Entry Keyboard="Numeric">
+                            <Entry Keyboard="Numeric"
+                                   Text="{Binding CantidadDiesel, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -158,7 +159,8 @@
                                     Tablet="35.0" />
                             </Entry.HeightRequest>
                            </Entry>
-                            <Entry Keyboard="Numeric">
+                            <Entry Keyboard="Numeric"
+                                   Text="{Binding Km_Diesel, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -185,7 +187,8 @@
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="combustible_icon" WidthRequest="15" />
-                            <Entry Keyboard="Numeric">
+                            <Entry   Keyboard="Numeric"
+                                   Text="{Binding CantidadGas, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
@@ -199,7 +202,8 @@
                                     Tablet="35.0" />
                             </Entry.HeightRequest>
                            </Entry>
-                            <Entry Keyboard="Numeric">
+                            <Entry Keyboard="Numeric"
+                                   Text="{Binding Km_Gas, Mode=TwoWay}">
                              <Entry.WidthRequest>
                                 <OnIdiom
                                     x:TypeArguments="x:Double"
